--- a/Quiz Bowl UI/Base.lproj/Main.storyboard
+++ b/Quiz Bowl UI/Base.lproj/Main.storyboard
@@ -744,11 +744,11 @@ Gw
                             <scrollView fixedFrame="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ptj-Wf-5nI">
                                 <rect key="frame" x="250" y="20" width="300" height="418"/>
                                 <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="NfW-7m-lJa">
-                                    <rect key="frame" x="0.0" y="17" width="300" height="401"/>
+                                    <rect key="frame" x="0.0" y="17" width="300" height="400"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="32" rowSizeStyle="automatic" headerView="TeG-4o-rAK" viewBased="YES" id="Cpc-ZO-F7F">
-                                            <rect key="frame" x="0.0" y="0.0" width="300" height="401"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" red="0.4085874695120339" green="0.59326549572018505" blue="0.99919462203979492" alpha="1" colorSpace="calibratedRGB"/>
@@ -768,7 +768,7 @@ Gw
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <button verticalHuggingPriority="750" id="Crk-cG-RAb">
-                                                            <rect key="frame" x="1" y="1" width="156" height="32"/>
+                                                            <rect key="frame" x="1" y="1" width="155.96698886621158" height="32"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <buttonCell key="cell" type="push" title="10 Points" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6yG-jo-TSm">
                                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -776,7 +776,7 @@ Gw
                                                             </buttonCell>
                                                         </button>
                                                         <button verticalHuggingPriority="750" id="FOL-z4-mpr">
-                                                            <rect key="frame" x="1" y="35" width="156" height="32"/>
+                                                            <rect key="frame" x="1" y="35" width="155.96698886621158" height="32"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <buttonCell key="cell" type="push" title="15 Points" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="aFU-kY-TMi">
                                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -784,7 +784,7 @@ Gw
                                                             </buttonCell>
                                                         </button>
                                                         <button id="nB2-uR-D4g">
-                                                            <rect key="frame" x="1" y="69" width="156" height="18"/>
+                                                            <rect key="frame" x="1" y="69" width="155.96698886621158" height="18"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" imagePosition="left" alignment="center" inset="2" id="YCn-ud-ytF">
                                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -793,7 +793,7 @@ Gw
                                                         </button>
                                                     </prototypeCellViews>
                                                 </tableColumn>
-                                                <tableColumn width="138" minWidth="40" maxWidth="1000" id="6Yr-lG-dgu">
+                                                <tableColumn width="136.80879076628571" minWidth="40" maxWidth="1000" id="6Yr-lG-dgu">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -807,7 +807,7 @@ Gw
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <button verticalHuggingPriority="750" id="gaR-IR-Wef">
-                                                            <rect key="frame" x="159.97076858950697" y="1" width="138" height="32"/>
+                                                            <rect key="frame" x="160" y="1" width="135.99293978632286" height="32"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <buttonCell key="cell" type="push" title="10 Points" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7ah-cT-qXW">
                                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -815,7 +815,7 @@ Gw
                                                             </buttonCell>
                                                         </button>
                                                         <button verticalHuggingPriority="750" id="UL2-Fp-4lh">
-                                                            <rect key="frame" x="159.97076858950697" y="35" width="138" height="32"/>
+                                                            <rect key="frame" x="160" y="35" width="135.99293978632286" height="32"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                             <buttonCell key="cell" type="push" title="15 Points" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8du-nq-lcz">
                                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -830,10 +830,10 @@ Gw
                                     <color key="backgroundColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="7lg-D2-l0t">
-                                    <rect key="frame" x="0.0" y="2" width="0.0" height="15"/>
+                                    <rect key="frame" x="0.0" y="403" width="300" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="9.8853411676646185e-11" horizontal="NO" id="svh-gg-lw2">
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="svh-gg-lw2">
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
