--- a/Quiz Bowl UI/Base.lproj/Main.storyboard
+++ b/Quiz Bowl UI/Base.lproj/Main.storyboard
@@ -874,7 +874,7 @@ Gw
                                     </subviews>
                                     <color key="backgroundColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </clipView>
-                                <scroller key="horizontalScroller" verticalHuggingPriority="750" doubleValue="0.5" horizontal="YES" id="7lg-D2-l0t">
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="7lg-D2-l0t">
                                     <rect key="frame" x="0.0" y="403" width="300" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
